# CIRISStatus

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  docker-compose.fabric.yml  docker-compose.yml
.github/workflows/: autorepin.yml  ci.yml  release.yml
FSD/: MONITORING_NODE_DESIGN.md
src/: adapter.rs  aggregate.rs  ceg.rs  config.rs  history.rs  main.rs  model.rs  probe.rs  roster.rs
