[package]
name = "ciris-status"
version = "0.1.0"
edition = "2021"
description = "The ciris.ai public health/status surface — the small standalone service that outlives CIRISLens. Serves /health, /v1/status, /api/v1/status, /api/v1/status/history by live outbound probes + a SQLite uptime history. No Grafana/Timescale/OAuth."
license = "AGPL-3.0-or-later"
publish = false

[[bin]]
name = "ciris-status"
path = "src/main.rs"

[features]
# Default build: the cost-safe outbound prober + SQLite uptime + the public
# website sockets (roster/health/SSE served from the local cache). No fabric
# substrate linked — stays self-contained and fast to build, and every existing
# endpoint keeps working unchanged.
default = []

# `fabric` turns ciris-status into a real fabric node (Node B in the design):
#   * Flow B — sign + EMIT probe results as CEG `health:liveness` `scores`
#     attestations into the federation directory (persist + verify hybrid sign).
#   * Flow A — READ `capacity:*` / `system:*` signed `scores` from the corpus and
#     project the consent-gated public roster.
#   * Self-registration of Node B's own witness key + (config-gated) peer key A
#     + a directed `consent:replication:v1` grant, and bidirectional A<->B
#     anti-entropy replication of `Attestation`-kind envelopes via ciris-edge's
#     `ReplicationRuntime` over the lightweight HTTP transport.
# Pulled in only under this feature so the default status-page build is unaffected.
fabric = ["dep:ciris-persist", "dep:ciris-verify-core", "dep:ciris-keyring", "dep:ciris-edge", "dep:hex", "dep:base64", "dep:sha2"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
# rustls (not openssl) so the binary is self-contained and cross-builds cleanly.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Pinned to 0.31 to match ciris-persist v8.6.0 (both declare `links = "sqlite3"`,
# so cargo requires a single libsqlite3-sys across the graph under `fabric`).
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# ── Fabric substrate (only under the `fabric` feature) ───────────────────────
# Pinned byte-for-byte to CIRISServer's Cargo.toml floor:
#   persist v8.6.0 / edge v4.3.0 / verify-family v5.11.0 (CEG 1.0-RC12).
# These give us the signed `scores` emit + read primitives:
#   - Engine::with_signer / sign_hybrid           (hybrid Ed25519 + ML-DSA-65)
#   - verify::canonicalize_envelope_for_signing   (JCS RFC 8785, CEG §0.9)
#   - FederationDirectory::put_attestation         (Flow B emit)
#   - ReadEngine::list_attestations(dimension_prefixes, valid_at, scope) (Flow A)
ciris-persist     = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v8.8.0", features = ["sqlite"], optional = true }
ciris-verify-core = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v5.11.0", optional = true }
ciris-keyring     = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v5.11.0", version = "5", features = ["software", "pqc-ml-dsa"], optional = true }
# ciris-edge — the federation REPLICATION spine (Round 2). Pinned byte-for-byte
# to CIRISServer/Cargo.lock (edge v4.5.0, rev 86eb59c) so Node A and Node B share
# one edge ABI; this edge pins persist v8.6.0 (== our pin above) so the graph
# carries a SINGLE ciris-persist. `transport-http` is chosen over
# `transport-reticulum`: Node B is an out-of-group external MONITOR — a lighter
# transport (no Reticulum/Leviculum stack, no RNS identity, no announce loop) is
# the right least-privilege footprint, and the consent-attestation wire contract
# is transport-agnostic so HTTP interops with A's Reticulum plane through any
# bridge. `ReplicationRuntime` (the API used) is compiled unconditionally — the
# feature only selects which `Transport` impl links.
ciris-edge        = { git = "https://github.com/CIRISAI/CIRISEdge", tag = "v4.5.1", features = ["transport-http"], optional = true }
hex               = { version = "0.4", optional = true }
base64            = { version = "0.22", optional = true }
sha2              = { version = "0.10", optional = true }

[profile.release]
strip = "symbols"
